# didyoumean

./: .gitignore  Cargo.toml  README.md  build.rs
.github/: FUNDING.yml
.github/workflows/: build-package.yml  rust.yml  tests.yml
benches/: edit_distance.rs
docs/: README.md
src/: cli.rs  langs.rs  lib.rs  main.rs
tests/: integration_test.rs
