[package]
name = "didyoumean"
authors = ["Hisbaan Noorani"]
version = "1.1.2"
edition = "2021"
license = "GPL-3.0"
description = "A CLI spelling corrector"
documentation = "https://github.com/hisbaan/didyoumean"
homepage = "https://github.com/hisbaan/didyoumean"
repository = "https://github.com/hisbaan/didyoumean"
readme = "docs/README.md"
keywords = ["levenshtein", "damerau", "edit-distance", "spelling"]
categories = ["command-line-utilities"]

[[bin]]
name = "dym"
path = "src/main.rs"

[dependencies]
clap = { version = "3.1.10", features = ["derive"] }
colored = { version = "2" }
cli-clipboard = {version = "0.2.1"}
dialoguer = {version = "0.10.0"}
indicatif = { version = "0.16.2" }
atty = { version = "0.2.14" }
dirs = { version = "4.0.0" }
reqwest = { version = "0.11.10", features = ["stream"] }
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3.21"
phf = { version = "0.10", features = ["macros"] }

[build-dependencies]
clap_complete = { version = "3.1.4" }
clap_mangen = { version = "0.1.6" }
clap = { version = "3.1.10", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.23.1" }

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "edit_distance"
harness = false
