[package]
name = "didyoumean"
authors = ["Hisbaan Noorani"]
version = "1.1.4"
edition = "2021"
license = "GPL-3.0"
description = "A CLI spelling corrector"
documentation = "https://github.com/hisbaan/didyoumean"
homepage = "https://github.com/hisbaan/didyoumean"
repository = "https://github.com/hisbaan/didyoumean"
readme = "docs/README.md"
keywords = ["levenshtein", "damerau", "edit-distance", "spelling"]
categories = ["command-line-utilities"]

[[bin]]
name = "dym"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
colored = "2.1.0"
cli-clipboard = "0.4.0"
dialoguer = "0.11.0"
indicatif = "0.17.7"
atty = "0.2.14"
dirs = "5.0.1"
reqwest = { version = "0.11.24", features = ["stream"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3.30"
phf = { version = "0.11.2", features = ["macros"] }
nix = { version = "0.27.1", features = ["process"] }

[build-dependencies]
clap_complete = "4.4.10"
clap_mangen = "0.2.19"
clap = { version = "4.4.18", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
nix = "0.27.1"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "edit_distance"
harness = false
